# cmake-sample

./: .gitignore  LICENSE  README.md  unix.sh  win.ps1
someSharing/: CMakeLists.txt  someHiddenStatic.cc  someHiddenStatic.hh  someSharing.cc  someSharing.hh  someSharingConfig.cmake.in  test.cc
